--- a/index.html
+++ b/index.html
@@ -5,12 +5,39 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <H1>
+  <div class="center">
+    <h1>
         My Portfolio
-    </H1>
+    </h1>
+    <div class="header"></div>
+      <h1>Zenen Baltazar aka Zbaltazar</h1>
+      <div class="center">
+        <h2>Sound Designer</h2>
+          <hr>
+    </div>
+    <div class="a">
+      <p>My <i>favorite</i> aspect about programming is leaving an imprint in the digital world.</p></div>
+    <img alt='It's Me!
+          src="https://hosting.photobucket.com/images/i/zenen_baltazar/IMG_20230119_124943.jpg?width=100&height=100&fit=bounds">
+          <h3>About Me</h3>
+            <hr>
+            <div class="cursive"><div class="a">
+              <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam consectetur sapien nec est sollicitudin, nec tempus mauris faucibus.</p></div>
+            <h3>My Projects</h3>
+            <ul>
+              <div class="element"><li><i>Nightmare Wizard<li>
+                <div class="element"><li><i>Roll-a-Ball</i></li>
+              <div class="element"><li><i>Stealth</i></li>
+            </ul>
+          <h3>Contact Me</h3>
+            <p><b>Phone Number:</b> (202) 555-1234</p>
+            <p><b>Email:</b> <a href="mailto:fake@email.com"> 
+               mailto:fake@email.com</a></p>
+
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
